# packages/dome-sdk/src/api/types/RefreshResponse.ts
@@ -1,0 +1,12 @@
+/**
+ * This file was auto-generated by Fern from our API Definition.
+ */
+
+export interface RefreshResponse {
+    /** New access token */
+    token: string;
+    /** New refresh token */
+    refreshToken: string;
+    /** Expiry (unix seconds) */
+    expiresAt: number;
+}
