# packages/dome-sdk/src/serialization/types/RefreshResponse.ts
@@ -1,0 +1,24 @@
+/**
+ * This file was auto-generated by Fern from our API Definition.
+ */
+
+import * as serializers from "../index";
+import * as DomeApi from "../../api/index";
+import * as core from "../../core";
+
+export const RefreshResponse: core.serialization.ObjectSchema<
+    serializers.RefreshResponse.Raw,
+    DomeApi.RefreshResponse
+> = core.serialization.object({
+    token: core.serialization.string(),
+    refreshToken: core.serialization.string(),
+    expiresAt: core.serialization.number(),
+});
+
+export declare namespace RefreshResponse {
+    export interface Raw {
+        token: string;
+        refreshToken: string;
+        expiresAt: number;
+    }
+}
